--- a/dados/src/main/resources/application.properties
+++ b/dados/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=dados
+spring.datasource.url=jdbc:postgresql://localhost:5432/cassino
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.jpa.properties.hibernate.show_sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.hibernate.ddl-auto=update
+server.port=8080
